src/test/deca/context/invalid/extension/acces-matrix.deca
// Programme validant l'accès à un élement de la matrice

{
    int[2,2.1] mat;
    print(mat[1,1]);
}